# CI_LABS

./: Halloween.ipynb  README.md  set-covering.ipynb
halloween_challenge/: Halloween.ipynb
lab02/: README.md  lab2-nim.ipynb  pyproject.toml
lab09/: README.md  lab9.ipynb  lab9_lib.py  pyproject.toml
lab10/: README.md  lab10.ipynb  pyproject.toml  q_table_200000_(0)_r0.json  q_table_200000_(0)_r0_fixed_eps.json  q_table_200000_(0)_r0_symm.json  q_table_200000_(0)_r1.json  q_table_200000_(0)_r2.json  q_table_200000_(0)_r2_symm.json  q_table_200000_(1)_r0_symm.json  q_table_200000_(1)_r1.json  q_table_200000_(1)_r2.json  q_table_200000_(2)_r1.json  q_table_200000_(2)_r2.json  q_table_200_000_(0).json  q_table_200_000_(1).json  q_table_200_000_(2).json  q_table_200_000_(3).json  q_table_200_000_(4).json  q_table_200_000_episodes.json  q_table_20_000_episodes.json
quixo/: README.md  game.py  main.py  mcts.py  minmax.py  mygame.py  pyproject.toml  quixo_project.ipynb
