[tool.poetry]
name = "lab02"
version = "0.1.0"
description = ""
authors = ["LORENZO FEZZA s312689 <s312689@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.26.0"
tqdm = "^4.66.1"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
