[tool.poetry]
name = "quixo"
version = "0.1.0"
description = ""
authors = ["LORENZO FEZZA s312689 <s312689@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.28.0"
numpy = "^1.26.2"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
